# resLik

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE  README.md  arxiv_metadata.txt  paper.tex  paper_draft.md  paper_draft.tex  pyproject.toml  references.bib  repro_bug.py
.github/workflows/: main.yml  pipeline.yml  r-package-check.yml  sim_ai.yml  sim_data.yml  sim_robotics.yml
benchmarks/: README.md  ablation.py  calibration_eval.py  diagnostic_consistency.py  distribution_shift.py  lambda_sweep.py  regression_report.txt  stability_shift.py
cpp/: CMakeLists.txt
cpp/bindings/: pybind_module.cpp
cpp/include/reslik/: diagnostics.hpp  gating.hpp  normalization.hpp  reslik_unit.hpp
cpp/src/: diagnostics.cpp  gating.cpp  normalization.cpp  reslik_unit.cpp
cpp/tests/: test_normalization.cpp  test_reslik_unit.cpp
docs/: adoption_applied_ai.md  adoption_data_systems.md  adoption_robotics.md  anti_patterns_rlcs.md  api_reference.md  benchmark_results.md  contributions_rlcs.md  control_surface.md  design_choices.md  differentiability_position.md  failure_modes.md  paper_abstract_rlcs.md  paradigm_rlcs.md  phase10_agreement_report.md  phase11_multisensor_report.md  phase6_checklist.md  phase9_tcs_report.md  related_work_rlcs.md  release_checklist.md  replication_applied_ai.md  replication_data_systems.md  replication_robotics.md  resLIK_R_package.md  rlcs_adoption_guide.md  rlcs_compliance.md  rlcs_extensions.md  rlcs_minimal_template.md  rlcs_reference_architecture.md  rlcs_replication_pitfalls.md  rlcs_self_validation.md  rlcs_sensor_composition.md  system_model_rlcs.md  terminology_rlcs.md  theory.md  what_this_is_not.md
examples/applied_ai/: multi_sensor_control.py  pipeline_control.py
examples/data_systems/: adaptive_flow.py  multi_sensor_flow.py
examples/multi_modal/: cross_modal_test.py
examples/rna_seq/: apply_reslik.py  preprocess.py
examples/robotics/: multi_sensor_perception.py  perception_gating.py
examples/synthetic/: generate_data.py  run_reslik.py
python/reslik/: __init__.py  control_policy.py  control_surface.py  diagnostics.py  wrapper.py
python/reslik/sensors/: agreement_sensor.py  temporal_consistency.py
resLIK_package/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  cran-comments.txt
resLIK_package/R/: agreement.R  control_surface.R  reslik.R  tcs.R
resLIK_package/inst/doc/: rlcs-introduction.html
resLIK_package/man/: agreement.Rd  reslik.Rd  rlcs_control.Rd  tcs.Rd
resLIK_package/tests/: testthat.R
resLIK_package/tests/testthat/: test-agreement.R  test-control.R  test-reslik.R  test-tcs.R
resLIK_package/vignettes/: rlcs-end-to-end.Rmd  rlcs-introduction.Rmd
scripts/: build_cpp.sh  run_tests.sh
scripts/figures/: generate_paper_figures.py
scripts/workflows/: run_ai_pipeline_sim.py  run_data_system_sim.py  run_robotics_sim.py  utils.py
tests/: test_agreement_sensor.py  test_control_surface.py  test_interface.py  test_smoke.py  test_temporal_consistency.py
